[package]
name = "gfx-hal-tutorial"
version = "0.1.0"
authors = ["Joshua Groves <josh@joshgroves.com>"]

[features]
default = []
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
winit = "0.17"
gfx-hal = { version = "0.1", git = "https://github.com/bzm3r/gfx", branch = "all-components" }
glsl-to-spirv = "0.1.6"
log = "0.4.0"
env_logger = "0.5.12"

[dependencies.gfx-backend-vulkan]
version = "0.1"
git = "https://github.com/bzm3r/gfx"
branch = "all-components"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.1"
git = "https://github.com/bzm3r/gfx"
branch = "all-components"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.1"
git = "https://github.com/bzm3r/gfx"
branch = "all-components"
optional = true

[[bin]]
name = "00_base_code"
path = "src/00_base_code.rs"

[[bin]]
name = "01_instance_creation"
path = "src/01_instance_creation.rs"

[[bin]]
name = "02_validation_layers"
path = "src/02_validation_layers.rs"

[[bin]]
name = "03_physical_device_selection"
path = "src/03_physical_device_selection.rs"

[[bin]]
name = "04_logical_device"
path = "src/04_logical_device.rs"

[[bin]]
name = "05_window_surface"
path = "src/05_window_surface.rs"

[[bin]]
name = "06_swap_chain_creation"
path = "src/06_swap_chain_creation.rs"

[[bin]]
name = "07_image_views"
path = "src/07_image_views.rs"

[[bin]]
name = "08_graphics_pipeline"
path = "src/08_graphics_pipeline.rs"

[[bin]]
name = "09_shader_modules"
path = "src/09_shader_modules.rs"

[[bin]]
name = "10_fixed_functions"
path = "src/10_fixed_functions.rs"

[[bin]]
name = "11_render_passes"
path = "src/11_render_passes.rs"

[[bin]]
name = "12_graphics_pipeline_complete"
path = "src/12_graphics_pipeline_complete.rs"

[[bin]]
name = "13_framebuffers"
path = "src/13_framebuffers.rs"

[[bin]]
name = "14_command_buffers"
path = "src/14_command_buffers.rs"

[[bin]]
name = "15_hello_triangle"
path = "src/15_hello_triangle.rs"

